rename flare index, version

--- a/examples/todo-list/src/index.html
+++ b/examples/todo-list/src/index.html
@@ -7,7 +7,11 @@
     <title>Todo List</title>
   </head>
   <body>
-    <script src="../../../index.js"></script>
+    <!--
+      Flare (0.0.5)
+      Todo List
+    -->
+    <script src="../../../flare-0.0.5.js"></script>
     <script src="./js/Constants.js"></script>
     <script src="./js/View/Error404Page.js"></script>
     <script src="./js/View/HomePage.js"></script>
