--- a/examples/boilerplate/src/index.html
+++ b/examples/boilerplate/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!--
-      Flare (0.0.4)
+      Flare (0.0.5)
       Front-end Boilerplate
     -->
 
@@ -22,7 +22,7 @@
     <!-- <script src="./js/Analytics.js"></script> -->
 
     <!-- INCLUDE FLARE -->
-    <script src="../../../index.js"></script><!-- <script src="./path/to/flare.js"></script> -->
+    <script src="../../../flare-0.0.5.js"></script>
 
     <!-- INCLUDE VIEWS -->
     <script src="./js/View/Main.js"></script>
